# kobosync

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  SECURITY.md  docker-compose.yml  mkdocs.yml  pyproject.toml
.github/: dependabot.yml
.github/workflows/: ci.yml  codeql.yml  docker-publish.yml  docker-test.yml  docs.yml
docs/: architecture.md  configuration.md  deployment.md  device_setup.md  index.md
docs/javascripts/: token-generator.js
docs/stylesheets/: extra.css
src/kobold/: __init__.py  config.py  constants.py  database.py  http_client.py  job_queue.py  kepubify.py  logging_config.py  main.py  models.py  scanner.py  scheduler.py  watcher.py
src/kobold/api/: health.py  proxy.py  routes.py
src/kobold/metadata/: amazon.py  base.py  epub.py  goodreads.py  manager.py  pdf.py  types.py
src/kobold/services/: conversion_service.py  metadata_service.py
src/kobold/utils/: kobo_token.py
src/kobosync/: config.py  constants.py  conversion.py  database.py  job_queue.py  kepubify.py  logging_config.py  main.py  watcher.py  worker.py
src/kobosync/api/: proxy.py  routes.py
src/kobosync/metadata/: amazon.py  base.py  epub.py  goodreads.py  manager.py  pdf.py
src/kobosync/services/: ingest.py  metadata_service.py
src/kobosync/utils/: hashing.py  kobo_token.py
tests/: conftest.py
tests/fixtures/: api.py  database.py  files.py  mocks.py  worker.py
tests/integration/: test_api_integration.py  test_config_hooks.py  test_e2e_flow.py  test_kepubify_availability.py  test_watcher_integration.py  test_worker_integration.py
tests/smoke/: test_docker.py  test_metadata_verification.py
tests/unit/: test_config.py  test_conversion.py  test_database.py  test_job_queue.py  test_kepubify.py  test_models.py  test_scanner.py  test_scheduler.py  test_worker.py
tests/unit/api/: test_health.py  test_routes.py
tests/unit/metadata/: test_amazon_provider.py  test_epub_extractor.py  test_goodreads_provider.py  test_manager.py  test_pdf_extractor.py  test_rate_limiter.py
tests/unit/services/: test_conversion_service.py  test_ingest.py  test_metadata_service.py
tests/unit/utils/: test_hashing.py  test_kobo_token.py
