[project]
name = "kobosync"
version = "0.1.0"
description = "Headless Kobo library synchronization daemon"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiofiles>=25.1.0",
    "beautifulsoup4>=4.14.3",
    "fastapi>=0.125.0",
    "httpx>=0.28.1",
    "pydantic-settings>=2.12.0",
    "pypdf>=6.4.2",
    "sqlmodel>=0.0.27",
    "structlog>=25.5.0",
    "uvicorn[standard]>=0.38.0",
    "watchfiles>=1.0.0",
    "xxhash>=3.6.0",
]

[dependency-groups]
dev = [
    "mkdocs>=1.6.1",
    "mkdocs-material>=9.7.1",
    "mypy>=1.19.1",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=7.0.0",
    "pytest-xdist>=3.6.1",
    "ruff>=0.14.10",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/kobosync"]

# ─────────────────────────────────────────────────────────────────────────────
# Pytest Configuration
# ─────────────────────────────────────────────────────────────────────────────

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
addopts = [
    "-v",
    "-n", "auto",
    "--tb=short",
    "--strict-markers",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
]

# ─────────────────────────────────────────────────────────────────────────────
# Mypy Configuration
# ─────────────────────────────────────────────────────────────────────────────

[tool.mypy]
python_version = "3.13"
mypy_path = ["src"]
packages = ["kobosync"]
exclude = ["local_debug/", "playground/", "tests/(.+/)?test_.*\\.py$"]
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = false  # SQLAlchemy/SQLModel stubs are version-dependent



# Third-party libraries without type stubs
[[tool.mypy.overrides]]
module = [
    "bs4.*",
    "pypdf.*",
]
ignore_missing_imports = true

# ─────────────────────────────────────────────────────────────────────────────
# Ruff Configuration
# ─────────────────────────────────────────────────────────────────────────────

[tool.ruff]
target-version = "py313"
line-length = 88
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # Pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
    "ARG",    # flake8-unused-arguments
    "SIM",    # flake8-simplify
    "TCH",    # flake8-type-checking
    "PTH",    # flake8-use-pathlib
    "RUF",    # Ruff-specific rules
    "ASYNC",  # flake8-async
]
ignore = [
    "E501",   # line too long (handled by formatter)
    "B008",   # function call in default argument (FastAPI Depends pattern)
]

[tool.ruff.lint.isort]
known-first-party = ["kobosync"]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = [
    "ARG",    # unused arguments common in fixtures
    "S101",   # assert is fine in tests
]

# ─────────────────────────────────────────────────────────────────────────────
# Coverage Configuration
# ─────────────────────────────────────────────────────────────────────────────

[tool.coverage.run]
source = ["src/kobosync"]
branch = true
omit = [
    "*/tests/*",
    "*/__pycache__/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
    "if __name__ == .__main__.:",
]
