[project]
name = "kobold"
version = "0.1.1"
description = "Headless Kobo library synchronization daemon"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "fastapi>=0.127.0",
    "httpx>=0.28.1",
    "orjson>=3.10.0",
    "pydantic-settings>=2.12.0",
    "pymupdf>=1.25.0",
    "selectolax>=0.3.21",
    "sqlmodel>=0.0.27",
    "structlog>=25.5.0",
    "uvicorn[standard]>=0.40.0",
    "watchfiles>=1.1.1",
    "xxhash>=3.6.0",
]

[project.urls]
Documentation = "https://niy.github.io/kobold/"
Source = "https://github.com/niy/kobold"

[dependency-groups]
dev = [
    "mkdocs>=1.6.1",
    "mkdocs-material>=9.7.1",
    "mypy>=1.19.1",
    "pre-commit>=4.5.1",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=7.0.0",
    "pytest-xdist>=3.8.0",
    "ruff>=0.14.10",
    "time-machine>=3.2.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/kobold"]

# ─────────────────────────────────────────────────────────────────────────────
# Pytest Configuration
# ─────────────────────────────────────────────────────────────────────────────

[tool.pytest.ini_options]
testpaths = ["tests/unit", "tests/integration"]
pythonpath = ["src"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
addopts = [
    "-v",
    "-n", "auto",
    "--tb=short",
    "--strict-markers",
]
filterwarnings = [
    "ignore:builtin type swigvarlink has no __module__ attribute:DeprecationWarning",
    "ignore:builtin type SwigPyPacked has no __module__ attribute:DeprecationWarning",
    "ignore:builtin type SwigPyObject has no __module__ attribute:DeprecationWarning",
    "ignore:.*swigvarlink.*:DeprecationWarning",
    "ignore:.*SwigPy.*:DeprecationWarning",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
]

# ─────────────────────────────────────────────────────────────────────────────
# Mypy Configuration
# ─────────────────────────────────────────────────────────────────────────────

[tool.mypy]
python_version = "3.14"
mypy_path = ["src"]
packages = ["kobold"]
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = false  # SQLAlchemy/SQLModel stubs are version-dependent

# Third-party libraries without type stubs
[[tool.mypy.overrides]]
module = [
    "pymupdf",
    "pymupdf.*",
]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = false
warn_return_any = false
disallow_untyped_decorators = false

# ─────────────────────────────────────────────────────────────────────────────
# Ruff Configuration
# ─────────────────────────────────────────────────────────────────────────────

[tool.ruff]
target-version = "py314"
line-length = 88
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # Pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
    "ARG",    # flake8-unused-arguments
    "SIM",    # flake8-simplify
    "TCH",    # flake8-type-checking
    "PTH",    # flake8-use-pathlib
    "RUF",    # Ruff-specific rules
    "ASYNC",  # flake8-async
]
ignore = [
    "E501",   # line too long (handled by formatter)
    "B008",   # function call in default argument (FastAPI Depends pattern)
]

[tool.ruff.lint.isort]
known-first-party = ["kobold"]

[tool.ruff.lint.flake8-type-checking]
runtime-evaluated-base-classes = [
    "pydantic.BaseModel",
    "pydantic_settings.BaseSettings",
    "sqlmodel.SQLModel",
    "typing.TypedDict",
    "typing_extensions.TypedDict",
]
runtime-evaluated-decorators = [
    "fastapi.Depends",
    "pytest.fixture",
    "contextlib.contextmanager",
    "contextlib.asynccontextmanager",
    "dataclasses.dataclass",
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = [
    "ARG",    # unused arguments common in fixtures
    "S101",   # assert is fine in tests
    "TCH",    # tests need runtime imports for fixtures and mocks
]
"src/kobold/conversion.py" = ["TCH"]
"src/kobold/utils/hashing.py" = ["TCH"]
"src/kobold/metadata/manager.py" = ["TCH"]

# ─────────────────────────────────────────────────────────────────────────────
# Coverage Configuration
# ─────────────────────────────────────────────────────────────────────────────

[tool.coverage.run]
source = ["src/kobold"]
branch = true
omit = [
    "*/tests/*",
    "*/__pycache__/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
    "if __name__ == .__main__.:",
]
